--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
+    "buildserver": "tsc -p server/.",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
