--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.19",
     "@types/node": "^24.7.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.2.2",
+    "ts-node": "^10.9.1"
   }
 }
